Changed the font color of location links on dashboard in order to make it more legible. Fixes #365

--- a/static/css/flatpage.css
+++ b/static/css/flatpage.css
@@ -35,6 +35,13 @@ table#stats td{
     font-weight: bold;
 }
 
+.problem a {
+    color: yellow;
+}
+
 .ok{
     background-color: #00CD00;
+}
+.ok a {
+    color: #25279f;
 }
